15-Sep-2007 by Aaron Perez
- fixed problem when starting a game with more than 255 initial units.
- when using int config variables, use minimum value if requested was less than
  minimum, and max value if it was more than maximum.
- fixed stopping the tank idle sound when a player host a non dedicated game 
  and resigns
- new sound options window (the base code was already done before), able to 
  enable/disable and change volumes

... ChangeLog is not up to date...

21-Feb-2005 by Matthias Braun
- fixed 2 more endianess typos
- added more sanity checking to prevent cheating
- fixed typo in NetMessageEncoder which resulted in TerminalCommands being sent
  out to clients in server hosting mode
- more cleanups all around the place

15-Feb-2005 by Matthias Braun
- fixed typo in UnitIniSyncMessage packet, had to increase network protocol
  version because of that
- improved parsing of , separated list for masterservers. it's robust against
  spaces now

5-Oct-2004 by Matthias Braun
- more cleanups
- fix dedicated server not updateing internal masterserverlist
- replaced SDL_net with custom socket wrappers

30-Sep-2004 by Matthias Braun
-BIIG cleanup:
  lots of endianness work in the network packets (only very few is missing)
  rewrite of Multi/Opcode Encoders/Decoders
  Removed UnitID class and replaced with a simple uint16_t
  Changed UnitList to be a std::map
  Fixed several possible bugs on the way
  Lots of random cleanup in Vehicle and UnitInterface code

15-Sep-2004 by Matthias Braun
-more warning fixes for gcc3.4
-made PlayerInterface lockable, so that the InfoThread should be threadsafe now
-server sends quit to masterserver now when exiting

30-Jun-2004 by Matthias Braun
-lots of warning fixes
-improvements to the masterserver code

04-Jun-2004 by Matthias Braun
-applied KROM_X's patch, but revised the mainloop parts by moving
 handleSDLEvents to NetPanzer/System.

07-Mai-2004 by Matthias Braun
-started work on new serverbrowsing window