@@ -4,7 +4,7 @@
 #----------------------------------------------------------------------------
 AC_PREREQ([2.54])
 
-AC_INIT([netpanzer], [0.8.2], [netpanzer-devel@lists.berlios.org])
+AC_INIT([netpanzer], [svn], [netpanzer-devel@lists.berlios.org])
 AC_CONFIG_SRCDIR([mk/jam/build.jam])
 AC_CONFIG_AUX_DIR([mk/autoconf])
 
