@@ -1,3 +1,9 @@
+16-Sep-2006 by Aaron Perez
+- added a timer to the right click function to unselect units only if some
+  time passed. (100 miliseconds)
+- units are selecte while moving the mouse on real time
+- double-click will select all units in screen
+
 15-Sep-2007 by Aaron Perez
 - fixed problem when starting a game with more than 255 initial units.
 - when using int config variables, use minimum value if requested was less than
